--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 
   },
   "scripts": {
-    "test": "TAP_TIMEOUT=20000 tap --tap ./tests",
+    "test": "TAP_TIMEOUT=20000 tap ./tests",
+    "test_long": "TAP_TIMEOUT=20000 tap --tap ./tests",
     "bucket_shadowing": "TAP_TIMEOUT=20000 tap --tap ./bucket_shadowing"	
   },
   "author": "Couchbase, Inc.",
