--- a/config/gateway_config_shadow_localhost.json
+++ b/config/gateway_config_shadow_localhost.json
@@ -1,5 +1,5 @@
  {
-     "log": ["HTTP", "Shadow", "CHANGES"],
+     "log": ["REST", "HTTP", "Shadow", "CHANGES"],
     "adminInterface": ":4985",
     "databases": {
         "db": {
