update tap version to latest-1.4.1 from 0.7

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "scp2": "0.1.x",
     "ssh2": "0.2.x",
     "couchbase": "2.0.6",
-    "tap": "0.7.x",
+    "tap": "1.4.1",
     "winston": "0.7.x",
     "sudo": "1.0.3"
 
