--- a/cluster_provisioning/ansible/install-sync-gateway.yml
+++ b/cluster_provisioning/ansible/install-sync-gateway.yml
@@ -1,6 +1,6 @@
 ---
 # Provision sync_gateway_vms
-- hosts: sg_nodes
+- hosts: sg_pool
   vars:
       sync_gateway_package_base_url:
       sync_gateway_package_name:
