--- a/cluster_provisioning/ansible/playbooks/files/sync_gateway_config.json
+++ b/cluster_provisioning/ansible/playbooks/files/sync_gateway_config.json
@@ -23,7 +23,7 @@
             "bucket":"bucket-1",
             "users":{
                 "GUEST":{
-                    "disabled":true,
+                    "disabled":false,
                     "admin_channels":[
                         "*"
                     ]
