--- a/cluster_provisioning/ansible/playbooks/files/sync_gateway_config.json
+++ b/cluster_provisioning/ansible/playbooks/files/sync_gateway_config.json
@@ -6,7 +6,7 @@
     "maxFileDescriptors": 90000,
     "slowServerCallWarningThreshold": 500,
     "compressResponses": true,
-    "log":["*"],
+    "log":[],
     "verbose":"true",
     "cluster_config": {
 	"server":"http://{{ couchbase_server_primary_node }}:8091",
