Use centos user for AWS compatibility
https://github.com/couchbaselabs/sync-gateway-tests/issues/56

--- a/distributed_index_tests/prov/ansible/playbooks/install-common-tools.yml
+++ b/distributed_index_tests/prov/ansible/playbooks/install-common-tools.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: sync_gateways:couchbase_servers
-  remote_user: root
+  remote_user: centos
   any_errors_fatal: true
   sudo: true
   tasks:
