--- a/distributed_index_tests/prov/ansible/playbooks/install-sync-gateway-package.yml
+++ b/distributed_index_tests/prov/ansible/playbooks/install-sync-gateway-package.yml
@@ -1,7 +1,7 @@
 ---
 # Remove sync_gateway
 - hosts: sync_gateways
-  remote_user: root
+  remote_user: centos
   sudo: true
 
   tasks:
@@ -11,7 +11,7 @@
 # Flush server buckets
 - hosts: couchbase_servers
   any_errors_fatal: true
-  remote_user: root
+  remote_user: centos
   sudo: true
   vars:
     # Primary node
@@ -35,7 +35,7 @@
 
 # Download package and install
 - hosts: sync_gateways
-  remote_user: root
+  remote_user: centos
   any_errors_fatal: true
   sudo: true
 
